allprojects {
    apply plugin: 'java'

    group = 'fr.islandswars'

    sourceCompatibility = 1.10
    targetCompatibility = 1.10

    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
    [compileJava, compileTestJava]*.options*.compilerArgs = ['-parameters']

    configurations {
        provided
        compile.extendsFrom provided
    }

    dependencies {
        provided('org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT')
        testCompile 'junit:junit:4.9'
    }

    repositories {
        mavenCentral()
        mavenLocal()
    }

    sourceSets {
        main {
            java {
                srcDirs = ['src/main/java']
            }
        }
        test {
            java {
                srcDirs = ['src/test/java']
            }
        }
    }
}
